# term-render

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Framebuffer.cpp.11626E29292E9DC7.idx  Framebuffer.hpp.4E58CDA8D079B57C.idx  Math.cpp.015983B31E90C806.idx  Math.hpp.EA5462C0B55C4D23.idx  Renderer.cpp.E2A31189541A123E.idx  Renderer.hpp.4931521833CA2EAD.idx  main.cpp.835291587627BA86.idx  test_vector.cpp.FF0F8A82EDCD1FF4.idx
src/: Framebuffer.cpp  Framebuffer.hpp  Math.hpp  Renderer.cpp  Renderer.hpp  main.cpp
tests/: CMakeLists.txt  test_vector.cpp
